# cargo

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
common/: CMakeLists.txt
common/cargo-utils/: callback-guard.cpp  callback-wrapper.hpp  ccolor.cpp  channel.cpp  channel.hpp  credentials.cpp  daemon.cpp  environment.cpp  eventfd.cpp  eventfd.hpp  exception.cpp  exception.hpp  execute.cpp  fd-utils.cpp  fd-utils.hpp  file-wait.cpp  fs.cpp  glib-loop.cpp  glib-loop.hpp  glib-utils.cpp  glib-utils.hpp  img.cpp  initctl.cpp  inotify.cpp  inotify.hpp  latch.cpp  paths.hpp  same-thread-guard.cpp  scoped-daemon.cpp  scoped-dir.cpp  scoped-gerror.cpp  scoped-gerror.hpp  signal.cpp  signal.hpp  signalfd.cpp  signalfd.hpp  smack.cpp  spin-wait-for.hpp  text.cpp  typeinfo.cpp  (+4 more)
libs/cargo/: CMakeLists.txt  types.hpp
libs/cargo-epoll/: CMakeLists.txt  event-poll.cpp  event-poll.hpp  events.cpp  events.hpp  glib-dispatcher.cpp  glib-dispatcher.hpp  libcargo-epoll.pc.in  signalfd.cpp  signalfd.hpp  thread-dispatcher.cpp  thread-dispatcher.hpp  timerfd.cpp  timerfd.hpp
libs/cargo-fd/: CMakeLists.txt
libs/cargo-fd/internals/: fdstore.cpp  fdstore.hpp
libs/cargo-gvariant/: CMakeLists.txt
libs/cargo-ipc/: CMakeLists.txt  client.cpp  client.hpp  exception.hpp  method-result.cpp  method-result.hpp  result.hpp  service.cpp  service.hpp  types.cpp  types.hpp
libs/cargo-ipc/epoll/: event-poll.cpp  glib-dispatcher.hpp  thread-dispatcher.hpp
libs/cargo-ipc/internals/: acceptor.cpp  acceptor.hpp  add-peer-request.hpp  event-queue.hpp  finish-request.hpp  method-request.hpp  processor.cpp  processor.hpp  remove-method-request.hpp  remove-peer-request.hpp  request-queue.hpp  result-builder.hpp  send-result-request.hpp  signal-request.hpp  socket.cpp  socket.hpp
libs/cargo-json/: CMakeLists.txt  cargo-json.hpp
libs/cargo-json/internals/: from-json-visitor.hpp  to-json-visitor.hpp
libs/cargo-logger/: CMakeLists.txt  backend-file.cpp  backend-file.hpp  backend-journal.cpp  backend-journal.hpp  backend-null.hpp  backend-persistent-file.cpp  backend-persistent-file.hpp  backend-stderr.cpp  backend-stderr.hpp  backend-syslog.cpp  backend-syslog.hpp  backend.hpp  formatter.cpp  formatter.hpp  level.cpp  level.hpp  libcargo-logger.pc.in  logger-scope.cpp  logger-scope.hpp  logger.cpp  logger.hpp
libs/cargo-sqlite/: CMakeLists.txt
libs/cargo-sqlite-json/: CMakeLists.txt  cargo-sqlite-json.hpp
libs/cargo-sqlite/internals/: kvstore.cpp  kvstore.hpp  to-kvstore-visitor.hpp
libs/cargo-sqlite/sqlite3/: connection.cpp  connection.hpp  statement.cpp  statement.hpp
libs/cargo-validator/: CMakeLists.txt  validator.cpp  validator.hpp
libs/cargo-validator/internals/: is-validable.hpp  validator-visitor.hpp
libs/cargo/internals/: visit-fields.hpp
libs/logger/: formatter.cpp
packaging/: cargo.spec
tests/scripts/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  ut.cpp
tests/unit_tests/cargo/: testconfig-example.hpp  ut-cargo.cpp  ut-dynvisit.cpp  ut-kvstore.cpp
tests/unit_tests/cargo-ipc/: ut-ipc.cpp  ut-socket.cpp
tests/unit_tests/configs/: CMakeLists.txt
tests/unit_tests/epoll/: ut-event-poll.cpp  ut-signalfd.cpp  ut-timerfd.cpp
tests/unit_tests/log/: ut-logger.cpp
tests/unit_tests/socket_test_service/: socket-test.cpp
tests/unit_tests/utils/: ut-callback-guard.cpp  ut-cargs.cpp  ut-channel.cpp  ut-counting-map.cpp  ut-fd-utils.cpp  ut-fs.cpp  ut-glib-loop.cpp  ut-inotify.cpp  ut-paths.cpp  ut-same-thread-guard.cpp  ut-signalfd.cpp  ut-text.cpp  ut-value-latch.cpp  ut-worker.cpp
utils/: build.sh  build_in_docker.sh  docker-compose.yml
